--- a/Template.html
+++ b/Template.html
@@ -3,7 +3,7 @@
   
   <head>
     <meta charset="utf-8" />
-    <title>SPECULUM</title>
+    <title>TITLE</title>
     <link rel="stylesheet" href="css/styles.css" />
 
   </head>
@@ -14,7 +14,7 @@
   <h1>SPECULUM</h1>
     <p>Somos eso que nos representamos a nosotros mismos</p>
       
-    <a href="Artes/Ninja/ninja.html">Ninjutsu</a>
+    <a href="ruta to path">Nombre</a>
 
 </body>
 </html> 
