--- a/Artes/Ninja/ninja.html
+++ b/Artes/Ninja/ninja.html
@@ -2,6 +2,7 @@
 <html lang="es">
   
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>Cosas Ninjas</title>
     <link rel="stylesheet" href="../../css/styles.css" /> 
@@ -12,7 +13,7 @@
 <body>
 
   <h1>Ninjutsu</h1>
-    <p>Somos eso que entrenamos día día</p>
+    <p>Somos eso que entrenamos día a día</p>
       
     
 
