--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>SPECULUM</title>
     <link rel="stylesheet" href="css/styles.css" />
@@ -12,7 +13,8 @@
 <body>
 
   <h1>SPECULUM</h1>
-    <p>Somos eso que nos representamos a nosotros mismos</p>
+    <p>Somos eso que nos representamos a nosotros mismos, sea como sea que entendamos ese "nosotros".<br>
+    La creación se dobla en nuestro interior(?), el inexplicable proceso reflexivo se desarrolla a nuestras espaldas.</p> 
       
     <a href="Artes/Ninja/ninja.html">Ninjutsu</a>
 
