--- a/Template.html
+++ b/Template.html
@@ -2,6 +2,7 @@
 <html lang="es">
   
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>TITLE</title>
     <link rel="stylesheet" href="css/styles.css" />
