--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
   
   <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>SPECULUM</title>
     <link rel="stylesheet" href="css/styles.css" />
@@ -12,11 +13,31 @@
 
 <body>
 
-  <h1>SPECULUM</h1>
+ 
+  <div class="ascii-art">
+
+  _____ _____  ______ _____ _    _ _     _    _ __  __ 
+ / ____|  __ \|  ____/ ____| |  | | |   | |  | |  \/  |
+| (___ | |__) | |__ | |    | |  | | |   | |  | | \  / |
+ \___ \|  ___/|  __|| |    | |  | | |   | |  | | |\/| |
+ ____) | |    | |___| |____| |__| | |___| |__| | |  | |
+|_____/|_|    |______\_____|\____/|______\____/|_|  |_|
+
+
+  </div>
+
+
     <p>Somos eso que nos representamos a nosotros mismos, sea como sea que entendamos ese "nosotros".<br>
     La creación se dobla en nuestro interior(?), el inexplicable proceso reflexivo se desarrolla a nuestras espaldas.</p> 
       
-    <a href="Artes/Ninja/ninja.html">Ninjutsu</a>
+    <a href="Aiki/aiki.html"> -->  Aikido</a><br>
+    <br>
+    <a href="Iaido/iaido.html"> -->  Iaido</a><br>
+    <br>
+    <a href="Ninja/ninja.html"> -->  Ninjutsu</a><br>
+    <br>
+    <a href="Taichi/taichi.html"> -->  Taichichuan</a><br>
+
 
 </body>
 </html> 
