--- a/Iaido/iaido.html
+++ b/Iaido/iaido.html
@@ -12,18 +12,11 @@
 
 
 <body>
-  <div class="ascii-art">
 
- _____      _     _       
-|_   _|    (_)   | |      
-  | |  __ _ _  __| | ___  
-  | | / _` | |/ _` |/ _ \ 
- _| || (_| | | (_| | (_) |
-|_____\__,_|_|\__,_|\___/ 
+  <h1>IAIDO</h1>
 
 
-  </div>
-    <p>Somos eso que entrenamos día a día</p>
+  <p>Somos eso que entrenamos día a día</p>
       
     
 
