--- a/Ninja/ninja.html
+++ b/Ninja/ninja.html
@@ -12,20 +12,11 @@
 
 
 <body>
-  <div class="ascii-art">
 
- _   _ _       _       _             
-| \ | (_)     (_)     | |            
-|  \| |_ _ __  _ _   _| |_ ___ _   _ 
-| . ` | | '_ \| | | | | __/ __| | | |
-| |\  | | | | | | |_| | |_\__ \ |_| |
-|_| \_|_|_| |_| |\__,_|\__|___/\__,_|
-             _/ |                    
-            |__/                   
+  <h1>NINJUTSU</h1>
 
 
-  </div>
-    <p>Somos eso que entrenamos día a día</p>
+  <p>Somos eso que entrenamos día a día</p>
       
     
 
