--- a/Taichi/taichi.html
+++ b/Taichi/taichi.html
@@ -13,8 +13,17 @@
 
 <body>
 
-  <h1>TAICHICHUAN</h1>
+  <div class="ascii-art">
 
+ _______    _      _     _      _                       
+|__   __|  (_)    | |   (_)    | |                      
+   | | __ _ _  ___| |__  _  ___| |__  _   _  __ _ _ __  
+   | |/ _` | |/ __| '_ \| |/ __| '_ \| | | |/ _` | '_ \ 
+   | | (_| | | (__| | | | | (__| | | | |_| | (_| | | | |
+   |_|\__,_|_|\___|_| |_|_|\___|_| |_|\__,_|\__,_|_| |_|
+
+
+  </div>
 
   <p>Somos eso que entrenamos día a día</p>
       
