--- a/Ninja/ninja.html
+++ b/Ninja/ninja.html
@@ -13,8 +13,18 @@
 
 <body>
 
-  <h1>NINJUTSU</h1>
+  <div class="ascii-art">
 
+ _   _ _       _       _             
+| \ | (_)     (_)     | |            
+|  \| |_ _ __  _ _   _| |_ ___ _   _ 
+| . ` | | '_ \| | | | | __/ __| | | |
+| |\  | | | | | | |_| | |_\__ \ |_| |
+|_| \_|_|_| |_| |\__,_|\__|___/\__,_|
+             _/ |                    
+            |__/            
+
+  </div>
 
   <p>Somos eso que entrenamos día a día</p>
       
