--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 
 
 <body>
-  <h1>SPECULUM</h1>
  
+  <div class="ascii-art">
 
+  _____ _____  ______ _____ _    _ _     _    _ __  __ 
+ / ____|  __ \|  ____/ ____| |  | | |   | |  | |  \/  |
+| (___ | |__) | |__ | |    | |  | | |   | |  | | \  / |
+ \___ \|  ___/|  __|| |    | |  | | |   | |  | | |\/| |
+ ____) | |    | |___| |____| |__| | |___| |__| | |  | |
+|_____/|_|    |______\_____|\____/|______\____/|_|  |_|
+                                                       
+
+
+  </div>
 
     <p>Somos eso que nos representamos a nosotros mismos, sea como sea que entendamos ese "nosotros".<br>
     La creación se dobla en nuestro interior(?), el inexplicable proceso reflexivo se desarrolla a nuestras espaldas.</p> 
