--- a/Taichi/taichi.html
+++ b/Taichi/taichi.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <title>Cosas Ninjas</title>
+    <title>Tai Chi</title>
     <link rel="stylesheet" href="../css/styles.css" /> 
 
   </head>
