--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
     <h1>Εσωτερικοί Κόσμοι</h1>
     <div class="boxing">  
-        <a href="Aiki/aiki.html"> -->  Filosofía</a><br>
+        <a href="Filo/filo.html"> -->  Filosofía</a><br>
         <br>
     <a href="Ninja/ninja.html"> -->  Música</a><br>
     <br>
