--- a/Filo/filo.html
+++ b/Filo/filo.html
@@ -49,6 +49,36 @@ Sin un marco no hay referencia, de ningún tipo.<br>
 <h3>
 ****************************************************************
 </h3>
+</h3>
+  <h2>Cuantificación monetaria del progreso espiritual</h2> 
+  <p>
+  Me asombran esas figuras que equiparan el progreso espiritual con los beneficios y activos monetarios de las personas.<br>
+  Existe una nueva camada de gurús, mezcla de guías espirituales y nuevos ricos con una sonrisa falsa de oreja a oreja siendo imposible determinar que hay detrás de esas figuras de gimnasio, cirugías estéticas y ropas de marca, si es que hay algo más detrás que las ansias de dinero.<br>
+  En realidad no es extraño que la espiritualidad no haya podido escapar del materialismo extremo, nada pudo hacerlo y es normal, son los tiempos que vivimos.
+  
+  </p>
+
+<h3>
+****************************************************************
+</h3>
+</h3>
+  <h2>Relativismo ad Absurdum</h2> 
+  <p>
+
+  </p>
+
+<h3>
+****************************************************************
+</h3>
+</h3>
+  <h2>Relativismo ad Absurdum</h2> 
+  <p>
+
+  </p>
+<h3>
+****************************************************************
+</h3>
+
 
 </body>
 </html> 
