--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 
 <body>
  
-  <div class="ascii-art">
+  <header class="ascii-art">
 
   _____ _____  ______ _____ _    _ _     _    _ __  __ 
  / ____|  __ \|  ____/ ____| |  | | |   | |  | |  \/  |
 | (___ | |__) | |__ | |    | |  | | |   | |  | | \  / |
  \___ \|  ___/|  __|| |    | |  | | |   | |  | | |\/| |
- ____) | |    | |___| |____| |__| | |___| |__| | |  | |
+ ____) | |    | |___| |____| |__| | |___| |__| | |  | |
 |_____/|_|    |______\_____|\____/|______\____/|_|  |_|
 
 
 
 
-  </div>
+  </header>
 
     <strong style="color: #fff;">Somos eso que nos representamos a nosotros mismos, sea como sea que entendamos ese "nosotros".<br>
     La creación se dobla en nuestro interior(?), el inexplicable proceso reflexivo se desarrolla a nuestras espaldas.</strong>
+    <br>
+    <br>
  
-    <div>
-    <h1>Εσωτερικοί Κόσμοι</h1>
-    <div class="boxing">  
+    <section>
+    <h2>Εσωτερικοί Κόσμοι</h2>
+    <article class="boxing">  
         <a href="Filo/filo.html"> -->  Filosofía</a><br>
         <br>
     <a href="Ninja/ninja.html"> -->  Música</a><br>
@@ -40,13 +42,13 @@
     <a href="Taichi/taichi.html"> -->  Literatura</a><br>
      <br>
     <a href="Taichi/taichi.html"> -->  Visuales</a><br>
-    </div>
-    </div>
+    </article>
+    </section>
     
 
-    <div>
-    <h1>Kampfkünste</h1>
-    <div class="boxing">  
+    <section>
+      <h2>Kampfkünste</h2>
+    <article class="boxing">  
         <a href="Aiki/aiki.html"> -->  Aikido</a><br>
     <br>
     <a href="Iaido/iaido.html"> -->  Iaido</a><br>
@@ -54,11 +56,17 @@
     <a href="Ninja/ninja.html"> -->  Ninjutsu</a><br>
     <br>
     <a href="Taichi/taichi.html"> -->  Taichichuan</a><br>
-    </div>
-    </div>
-
+    </article>
+    </section>
 
     
+        <section>
+      <h2>Liber Umbrarum</h2>
+    <article class="boxing">  
+        <a href="Diario/diario.html"> -->  Liber Umbrarum</a><br>
+    <br>
+    </article>
+    </section>    
 
 </body>
 </html> 
