--- a/Filo/filo.html
+++ b/Filo/filo.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<div class="ascii-art">
+<header class="ascii-art">
  ______ _ _                  __ _       
 |  ____(_) |                / _(_)      
 | |__   _| | ___  ___  ___ | |_ _  __ _ 
@@ -24,10 +24,10 @@
 |_|    |_|_|\___/|___/\___/|_| |_|\__,_|
                                         
 
-</div>
-
+</header>
+<main>
     <p>Somos eso que nos representamos a nosotros mismos</p>
- 
+    <section>
 <h3>
 ****************************************************************
 </h3>
@@ -35,6 +35,7 @@
  <h3>
 ****************************************************************
 </h3>
+<article>
   <h2>Relativismo ad Absurdum</h2> 
   <p>
   Sin mojones, sin referencias no sólo que todo se relativiza sino que tampoco se podría analizar elemento alguno o elemento perteneciente a alguna tradición (de pensamiento, por ejemplo) ya que no sólo se pierden las categorías sociales sino también las analíticas.
@@ -47,9 +48,10 @@ Sin un marco no hay referencia, de ningún tipo.<br>
 
   </p>
 <h3>
-****************************************************************
-</h3>
-</h3>
+****************************************************************</h3>
+</article>
+
+<article>
   <h2>Cuantificación monetaria del progreso espiritual</h2> 
   <p>
   Me asombran esas figuras que equiparan el progreso espiritual con los beneficios y activos monetarios de las personas.<br>
@@ -58,27 +60,37 @@ Sin un marco no hay referencia, de ningún tipo.<br>
   
   </p>
 
-<h3>
-****************************************************************
-</h3>
-</h3>
+<h3>****************************************************************</h3>
+</article>
+
+<article>
   <h2>Relativismo ad Absurdum</h2> 
   <p>
 
   </p>
 
-<h3>
-****************************************************************
-</h3>
-</h3>
+<h3>****************************************************************</h3>
+</article>
+
+<article>
   <h2>Relativismo ad Absurdum</h2> 
   <p>
 
   </p>
-<h3>
-****************************************************************
-</h3>
 
+<h3>****************************************************************</h3>
+</article>
 
+<article>
+  <h2>TEMPLATE_NO_TOCAR!!!!!</h2> 
+  <p>
+
+  </p>
+
+<h3>****************************************************************</h3>
+</article>
+
+    </section>
+</main>
 </body>
 </html> 
