--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <title>SPECULUM</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./fotis/sigil1.png">
 
   </head>
 
@@ -26,7 +27,7 @@
 
 
   </header>
-
+  <main>
     <strong style="color: #fff;">Somos eso que nos representamos a nosotros mismos, sea como sea que entendamos ese "nosotros".<br>
     La creación se dobla en nuestro interior(?), el inexplicable proceso reflexivo se desarrolla a nuestras espaldas.</strong>
     <br>
@@ -67,6 +68,6 @@
     <br>
     </article>
     </section>    
-
+  </main>
 </body>
 </html> 
