--- a/Aiki/aiki.html
+++ b/Aiki/aiki.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
-    <title>Cosas Ninjas</title>
+    <title>Aiki Cosas</title>
     <link rel="stylesheet" href="../css/styles.css" /> 
 
   </head>
@@ -19,7 +19,7 @@
     /\   (_) |  (_)   | |      
    /  \   _| | ___  __| | ___  
   / /\ \ | | |/ / |/ _` |/ _ \ 
- / ____ \| |   <| | (_| | (_) |
+ / ____ \| |    | | (_| | (_) |
 /_/    \_\_|_|\_\_|\__,_|\___/ 
                                
 
